# template-cpp14

./: .gitignore  404.html  AddTemplateREADME.md  Taskfile.yml  features.html  index.html  intro.html  magefile.go  quickstart.html  rules.yaml  sitemap.xml
.github/workflows/: ci_generate.yml
assets/js/: 0e384e19.1139e6a1.js  0e384e19.289a0477.js  0e384e19.39805a6e.js  0e384e19.4d5818c0.js  0e384e19.9f280b04.js  5e8c3d05.00d71f8c.js  5e8c3d05.0bf6ddfc.js  (+54 more)
features/: api.html  conan.html  monitor.html  mqtt.html  olink.html  stubs.html
goldenmaster/: CMakeLists.txt  Lifecycle for olink client-server implementation.md  test_conan.sh
goldenmaster/apigear/: conanfile.py
goldenmaster/apigear/olink/: CMakeLists.txt  iolinkconnector.h  olinkclient.cpp  olinkclient.h  olinkconnection.cpp  olinkconnection.h  olinkhost.cpp  olinkhost.h
goldenmaster/apigear/olink/logger/: logger.h
goldenmaster/apigear/olink/private/: connectionstorage.cpp  connectionstorage.h  olinkremote.cpp  olinkremote.h  olinkwebsockethandler.cpp  olinkwebsockethandler.h  requesthandlerfactory.h
goldenmaster/apigear/olink/tests/: CMakeLists.txt  olink_connection.test.cpp  olinkhost.test.cpp
goldenmaster/apigear/olink/tests/private/test_server/: test_server.hpp  test_server_request_handler.hpp
goldenmaster/apigear/tracer/: CMakeLists.txt  tracer.h
goldenmaster/examples/app/: CMakeLists.txt  main.cpp
goldenmaster/examples/appthreadsafe/: CMakeLists.txt
goldenmaster/examples/olinkclient/: CMakeLists.txt  main.cpp
goldenmaster/examples/olinkserver/: CMakeLists.txt  main.cpp
goldenmaster/modules/tb_enum_module/: conanfile.py
goldenmaster/modules/tb_enum_module/tb_enum/: CMakeLists.txt
goldenmaster/modules/tb_enum_module/tb_enum/implementation/: CMakeLists.txt  enuminterface.cpp  enuminterface.h  enuminterface.test.cpp
goldenmaster/modules/tb_enum_module/test_package/: CMakeLists.txt  conanfile.py  main.cpp
goldenmaster/modules/tb_same1_module/: conanfile.py
goldenmaster/modules/tb_same1_module/tb_same1/: CMakeLists.txt
goldenmaster/modules/tb_same1_module/tb_same1/implementation/: CMakeLists.txt  sameenum1interface.cpp  sameenum1interface.h  sameenum1interface.test.cpp  sameenum2interface.cpp  sameenum2interface.h  sameenum2interface.test.cpp  samestruct1interface.cpp  samestruct1interface.h  samestruct1interface.test.cpp  samestruct2interface.cpp  samestruct2interface.h  samestruct2interface.test.cpp
goldenmaster/modules/tb_same1_module/test_package/: CMakeLists.txt  conanfile.py  main.cpp
goldenmaster/modules/tb_same2_module/: conanfile.py
goldenmaster/modules/tb_same2_module/tb_same2/: CMakeLists.txt
goldenmaster/modules/tb_same2_module/tb_same2/implementation/: CMakeLists.txt  sameenum1interface.cpp  sameenum1interface.h  sameenum1interface.test.cpp  sameenum2interface.cpp  sameenum2interface.h  sameenum2interface.test.cpp  samestruct1interface.cpp  samestruct1interface.h  samestruct1interface.test.cpp  samestruct2interface.cpp  samestruct2interface.h  samestruct2interface.test.cpp
goldenmaster/modules/tb_same2_module/test_package/: CMakeLists.txt  conanfile.py  main.cpp
goldenmaster/modules/tb_simple_module/: conanfile.py
goldenmaster/modules/tb_simple_module/tb_simple/: CMakeLists.txt
goldenmaster/modules/tb_simple_module/tb_simple/implementation/: CMakeLists.txt  simplearrayinterface.cpp  simplearrayinterface.h  simplearrayinterface.test.cpp  simpleinterface.cpp  simpleinterface.h  simpleinterface.test.cpp
goldenmaster/modules/tb_simple_module/test_package/: CMakeLists.txt  conanfile.py  main.cpp
goldenmaster/modules/testbed1_module/: conanfile.py
goldenmaster/modules/testbed1_module/test_package/: CMakeLists.txt  conanfile.py  main.cpp
goldenmaster/modules/testbed1_module/testbed1/: CMakeLists.txt
goldenmaster/modules/testbed1_module/testbed1/implementation/: CMakeLists.txt  structarrayinterface.cpp  structarrayinterface.h  structarrayinterface.test.cpp  structinterface.cpp  structinterface.h  structinterface.test.cpp
goldenmaster/modules/testbed2_module/: conanfile.py
goldenmaster/modules/testbed2_module/test_package/: CMakeLists.txt  conanfile.py  main.cpp
goldenmaster/modules/testbed2_module/testbed2/: CMakeLists.txt
goldenmaster/modules/testbed2_module/testbed2/implementation/: CMakeLists.txt  manyparaminterface.cpp  manyparaminterface.h  manyparaminterface.test.cpp  nestedstruct1interface.cpp  nestedstruct1interface.h  nestedstruct1interface.test.cpp  nestedstruct2interface.cpp  nestedstruct2interface.h  nestedstruct2interface.test.cpp  nestedstruct3interface.cpp  nestedstruct3interface.h  nestedstruct3interface.test.cpp
magefiles/: build.go
performance/: CMakeLists.txt  README.md
performance/apigear/: GenerateIdl.py  performance.solution.yaml  performance_interface.module.yaml  performance_interface100.module.yaml
performance/testApi/: CMakeLists.txt
performance/testApi/modules/api_module/api/: ApiConfig.cmake.in  CMakeLists.txt
performance/testApi/modules/api_module/api/implementation/: CMakeLists.txt  testapi.cpp  testapi.h  testapi.test.cpp  testapi0.cpp  testapi0.h  testapi0.test.cpp  testapi1.cpp  testapi1.h  testapi1.test.cpp  testapi10.cpp  testapi10.h  testapi10.test.cpp  testapi11.cpp  testapi11.h  testapi11.test.cpp  testapi12.cpp  testapi12.h  testapi12.test.cpp  testapi13.cpp  testapi13.h  testapi13.test.cpp  testapi14.cpp  testapi14.h  testapi14.test.cpp  testapi15.cpp  testapi15.h  testapi15.test.cpp  testapi16.cpp  testapi16.h  testapi16.test.cpp  testapi17.cpp  testapi17.h  testapi17.test.cpp  testapi18.cpp  testapi18.h  testapi18.test.cpp  testapi19.cpp  testapi19.h  testapi19.test.cpp  (+264 more)
performance/tests_many_objects/: inspected_sink.h  prepare_test_data.h  prepare_test_services.cpp  prepare_test_services.h  server_for_tests.cpp  test_client_set_float.cpp  test_client_set_int.cpp  test_client_set_string.cpp
performance/tests_single_object/: server_for_tests.cpp  test_client_set_int_property.cpp  test_client_set_string_property.cpp  test_sink.h
templates/: CMakeLists.txt.tpl  README.md  test_conan.sh
(+50 files in other folders)
